added proceed button & renamed file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
       crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Cart Summary - Shopping Mobile App</title>
   </head>
   <body>
     <section>
@@ -40,7 +40,7 @@
         <div class="price">
           <h3>Subtotal : INR ₹ 21,767.00</h3>
           <span>incl. of taxes<br />(Also includes all applicable duties)</span>
-          <a href="/order-summary.html"
+          <a href="/shipping-information.html"
             ><button type="button" class="btn btn-dark">
               Proceed to buy(3 items)
             </button></a
