--- a/shipping-information.html
+++ b/shipping-information.html
@@ -14,7 +14,7 @@
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
       crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Shipping Information - Shopping Mobile App</title>
   </head>
   <body>
     <section>
@@ -29,14 +29,18 @@
         </div>
 
         <!-- Subtotal -->
-        <!-- <div class="price">
+        <div class="price">
           <h3>Subtotal : INR ₹ 21,767.00</h3>
           <span>incl. of taxes<br />(Also includes all applicable duties)</span>
           <a href=""
             ><button type="button" class="btn btn-dark">
               Proceed to buy(3 items)
             </button></a>
-        </div> -->
+        </div>
+
+        <div class="proceed-button">
+          <button class="btn btn-lg btn-warning" type="button">Proceed to payment</button>
+        </div>
 
         
 
