changed img src link

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       <main>
         <!-- Address Selection -->
         <div class="address">
-          <img src="/images/location-icon.svg" alt="" />
+          <img src="../images/location-icon.svg" alt="" />
           <span>Select the address</span>
-          <img src="/images/arrow-down.svg" alt="" />
+          <img src="../images/arrow-down.svg" alt="" />
         </div>
 
         <!-- Subtotal -->
         <div class="price">
           <h3>Subtotal : INR ₹ 21,767.00</h3>
           <span>incl. of taxes<br />(Also includes all applicable duties)</span>
-          <a href="/shipping-information.html"
+          <a href="../shipping-information.html"
             ><button type="button" class="btn btn-dark">
               Proceed to buy(3 items)
             </button></a
@@ -51,7 +51,7 @@
         <div class="row item-box">
           <!-- product image and quantity -->
           <div class="col-5 item-image">
-            <img src="/images/product-images/hoodie.png" alt="" />
+            <img src="../images/product-images/hoodie.png" alt="" />
             <div class="quantity">
               <a href="#" class="quantity_minus"><span>-</span></a>
               <input
@@ -90,7 +90,7 @@
         <div class="row item-box">
           <!-- product image and quantity -->
           <div class="col-5 item-image">
-            <img src="/images/product-images/joggers.png" alt="" />
+            <img src="../images/product-images/joggers.png" alt="" />
             <div class="quantity">
               <a href="#" class="quantity_minus"><span>-</span></a>
               <input
@@ -127,7 +127,7 @@
         <div class="row item-box">
           <!-- product image and quantity -->
           <div class="col-5 item-image">
-            <img src="/images/product-images/shoes.png" alt="" />
+            <img src="../images/product-images/shoes.png" alt="" />
             <div class="quantity">
               <a href="#" class="quantity_minus"><span>-</span></a>
               <input
@@ -161,12 +161,12 @@
         <!-- End of item box - 3 -->
 
         <div class="nav-bottom">
-          <a href=""><img src="images/home-icon.svg" alt="" /></a>
-          <a href=""><img src="images/wishlist-icon.svg" alt="" /></a>
+          <a href=""><img src="../images/home-icon.svg" alt="" /></a>
+          <a href=""><img src="../images/wishlist-icon.svg" alt="" /></a>
           <a class="active" href=""
-            ><img src="images/selected-bag-icon.svg" alt=""
+            ><img src="../images/selected-bag-icon.svg" alt=""
           /></a>
-          <a href=""><img src="images/user-icon.svg" alt="" /></a>
+          <a href=""><img src="../images/user-icon.svg" alt="" /></a>
         </div>
 
       </main>
