added estimate and costs & misc. changes

--- a/shipping-information.html
+++ b/shipping-information.html
@@ -55,7 +55,7 @@
 
         <div class="new-address">
           <h5>Select the delivery address</h5>
-          <button class="btn btn-lg btn-dark" type="button">
+          <button class="btn btn-dark" type="button">
             Add new address
           </button>
         </div>
@@ -64,20 +64,28 @@
           <div class="row prev-address">
             <div class="col-12">
               <div class="box">
-                <h3>Rahul Sabinkar</h3>
+                <h5>Rahul Sabinkar</h3>
                 <label
                   ><input type="checkbox" />
                   <span class="checkmark"></span>
                 </label>
               </div>
             </div>
-            <span
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut
-              accusamus </span
-            ><br />
+            
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut
+              accusamus 
+            </span><br/>
+
+            <div>
+              <div class="details">
+                <span class="estimate" >Estimated Delivery: 8th April 2023</span><br>
+                <span>Shipping Costs : <em>Eligible for free delivery</em></span>
+              </div>
+            </div>
+
             <div class="edit-button">
-              <button class="btn btn-md btn-light">Add new instructions</button>
-              <button class="btn btn-md btn-dark">Edit</button>
+              <button class="btn btn-light">Add new instructions</button>
+              <button class="btn btn-dark">Edit</button>
             </div>
           </div>
           <br />
@@ -85,7 +93,7 @@
           <div class="row prev-address">
             <div class="col-12">
               <div class="box">
-                <h3>Sri Ram</h3>
+                <h5>Sri Ram</h5>
                 <label
                   ><input type="checkbox" />
                   <span class="checkmark"></span>
@@ -96,9 +104,17 @@
               >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut
               accusamus </span
             ><br />
+
+            <div>
+              <div class="details">
+                <span class="estimate" >Estimated Delivery: 16th April 2023</span><br>
+                <span>Shipping Costs : <em>Eligible for free delivery</em></span>
+              </div>
+            </div>
+
             <div class="edit-button">
-              <button class="btn btn-md btn-light">Add new instructions</button>
-              <button class="btn btn-md btn-dark">Edit</button>
+              <button class="btn btn-light">Add new instructions</button>
+              <button class="btn btn-dark">Edit</button>
             </div>
           </div>
         </div>
