--- a/shipping-information.html
+++ b/shipping-information.html
@@ -120,7 +120,7 @@
         </div>
 
         <div class="proceed-button">
-          <a href="">
+          <a href="payment-information.html">
             <button class="btn btn-lg btn-warning" type="button">
               Proceed to payment
             </button>
