added paypal option

--- a/payment-information.html
+++ b/payment-information.html
@@ -72,11 +72,8 @@
                     <img src="images/arrow-down.svg" alt="">
                 </div>
                 <div class="method">
-                    <p>Net banking</p>
-                    <label>
-                        <input type="checkbox" />
-                        <span class="checkmark"></span>
-                    </label>
+                    <img class="paypal" src="images/paypal-logo.png" alt="">
+                    <img src="images/arrow-down.svg" alt="">
                 </div>
                 <div class="method">
                     <p>EMI</p>
